KN #384811 Boxes are correctly aligned
Required content change as well:
* [callout] box on same line as [two_fifth_last] box
* <h2> on next line

Didn't work with:
* [callout] box on next line
* <h2> on same line

--- a/mppt.css
+++ b/mppt.css
@@ -99,3 +99,7 @@ body {
 .home h1	{
 	color: #444;
 }
+
+.cta	{
+	padding-bottom: 10px !important;
+}
